<resources>
    <string name="app_name">Prayer Times</string>
    <string name="auth_token">Auth-Token</string>
    <string name="bismillah">بِسْمِ اللَّـهِ الرَّحْمَـٰنِ الرَّحِيمِ</string>
    <string name="FailPlaease">Fail! Please check your internet connection.</string>
    <string name="bismillahTextEngSaheeh">In the name of Allah, the Entirely Merciful, the Especially Merciful.</string>
    <string name="bismillahTextTurkish">Rahman ve rahim Allah adiyle</string>
    <string name="bismillahTextUrdu">اللہ کے نام سے شروع جو بہت مہربان رحمت والا</string>
    <string name="bismillahTextEngShakir">In the name of Allah, the Beneficent, the Merciful.</string>
    <string name="bismillahTextEngYusaf">In the name of Allah, Most Gracious, Most Merciful.</string>
    <string name="bismillahTextFrench">Au nom d\"Allah, le Tout Miséricordieux, le Très Miséricordieux.</string>
    <string name="bismillahTextHindi">अल्लाह के नाम से जो बड़ा कृपालु और अत्यन्त दयावान हैं।</string>
    <string name="bismillahTextIndonesianBahasha">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang.</string>
    <string name="bismillahTextItalian">In nome di Allah, il Compassionevole, il Misericordioso</string>
    <string name="bismillahTextPersianGhommshei">به نام خداوند بخشنده مهربان</string>
    <string name="bismillahTextSpanishCortes">¡En el nombre de Alá, el Compasivo, el Misericordioso!</string>
    <string name="doYouWant">Do you want to Download Surah</string>
    <string name="bismillahTextBengali">শুরু করছি আল্লাহর নামে যিনি পরম করুণাময়, অতি দয়ালু।</string>
    <string name="bismillahTextChinese">奉至仁至慈的真主之名</string>
    <string name="names_god_islam">99 names of Allah</string>
    <string name="bismillahTextDutchKeyzer">In naam van den lankmoedigen en albarmhartigen God.</string>
    <string name="bismillahTextEngDarayabadi">In the name of Allah, the Compassionate, the Merciful.</string>
    <string name="bismillahTextEngMadudi">In the name of Allah, the Merciful, the Compassionate</string>
    <string name="bismillahTextEngPickthal">In the name of Allah, the Beneficent, the Merciful.</string>
    <string name="downloading">Downloading</string>
    <string name="ok">OK</string>
    <string name="succes">Success!</string>
    <string name="yourTokenApikey">YourTokenApiKey</string>
    <string name="lblcitycountry">%1$s, %2$s</string>
    <string name="fasting_lheader1">Introduction</string>
    <string name="fasting_lheader2">Things That Void a Fast</string>
    <string name="fasting_lheader3">Haram Fasts</string>
    <string name="fasting_lheader4">Person Exempted from Fasting</string>
    <string name="fasting_lheader5">Things Invalidating Fast</string>
    <string name="fasting_lheader6">Traveler in Ramadan</string>
    <string name="fasting_lheader7">Fasting for Sick person</string>
    <string name="fasting_lheader8">Kaffara for not Keeping or Breaking the Fast</string>
    <string name="fasting_text1">Fasting during the month of Ramadan every year is another pillar of faith of Islam. During the whole Ramadan Muslims refrain from, all kinds of drinks, food and sexual intercource from dawn till dusk. Besides these, Muslims are also expected to refrain from all other minor and major evils during Ramadan and when in fast.</string>
    <string name="fasting_text2">\10 * Eating and drinking of any kind during the fasting hours. \10 * Indulging in sexual intercourse and fornication during fasting hours. \10 * Mastrubating during fasting hours. \10 * Imputing lies on Allah and Prophet (PBUH) also void the fast of a person. \10 * Letting the dust of either some eatable item or simple earth reach the throat also voids the fast. \10 * Remaining in the state of janabat (Sexual impurity) till the Fajar Azan also voids the fast. \10 * Voluntary vomiting other then the reason sickness voids the fast.</string>
    <string name="fasting_text3">\10 * Fasting on the day of Eid-ul Fitr and Eid-ul-Azha. \10 * For a wife to keep Mustahab fast if she won’t be able to perform the duties to husband. \10 * Haram for children to keep Mustahab fast as causes emotion strain. \10 * Haram in cause there is a danger of health by keeping the fast.</string>
    <string name="fasting_text4">Those who are exempted from fasting in Ramadan include: \10 * Na-baligh person. \10 * Insane person. \10 * A traveler needs to offer Qaza. \10 * Women in menstruation need to keep Qaza fast after Ramadan. \10 * Aged person not having the strength of fasting in Ramadan. \10 * If fasting is harmful for the baby of a pregnant woman then she must do Qaza. \10 * For breast-feeding woman in case of any problem of health the Qaza is wajib after</string>
    <string name="fasting_text5">If the following are done intentionally they break the fast: \10 * Drinking or eating. \10 * Vomiting \10 * Dust reaching the throat. \10 * Liquid enema. \10 * Sexual intercourse. \10 * Mastrubation \10 * Not doing Ghusl before Fajr in case of Janabat.</string>
    <string name="fasting_text6">\10 * If journey starts after mid day in Ramadan, then the fast must be observed. \10 * If the journey starts before midday in Ramadan, then the fast would automatically break after reaching a certain. \10 * If you return back to your home after Zawal from a journey then no need to observer fast that day, \10 * If you return back home from a journey before zawal then you can observe the fast but Qaza needs to be paid. \10 * Traveling somewhere with not living more than 10 fast must not be kept.</string>
    <string name="fasting_text7">For a sick person fasting is not wajib under the following conditions: \10 * If a person feels that keeping a fast would surely harm him or her. \10 * If the person is not sure about the harm of fasting but is advised by the doctor.</string>
    <string name="fasting_text8">If the fast is broken intentionally or not kept at all then in addition to Qaza a person needs to pay Kaffara as well against each fast, which is: \10 * Feeding of 60 poor people. \10 * Doing 60 fasts.</string>
    <string name="fasting_title1">1. Introduction</string>
    <string name="fasting_title2">2. Things That Void a Fast</string>
    <string name="fasting_title3">3. Haram Fasts</string>
    <string name="fasting_title4">4. Person Exempted from Fasting</string>
    <string name="fasting_title5">5. Things Invalidating Fast</string>
    <string name="fasting_title6">6 Traveler in Ramadan</string>
    <string name="fasting_title7">7. Fasting for Sick person</string>
    <string name="fasting_title8">8. Kaffara for not Keeping or Breaking the Fast.</string>
    <string name="haji_lheader1">Introduction</string>
    <string name="haji_lheader10">Step 9: Farewell Tawaf</string>
    <string name="haji_lheader2">Step 1: Entering in the State of Ihram</string>
    <string name="haji_lheader3">Step 2: Performing Umrah</string>
    <string name="haji_lheader4">Step 3: Departure to Mina</string>
    <string name="haji_lheader5">Step 4: Departure to Arafat</string>
    <string name="haji_lheader6">Step 5: Departure to Muzdalifa</string>
    <string name="haji_lheader7">Step 6: Returning to Mina</string>
    <string name="haji_lheader8">Step 7: Tawaf Al-Ifada</string>
    <string name="haji_lheader9">Step 8: Returning to Mina(Again)</string>
    <string name="haji_text1">Hajj is the fifth pillar of Islam. Hajj refers to the pilgrimage paid by Muslims to the holy city of Makkah in the month of DHul Hijjah. Every physically and financially able Muslim must perform hajj in his or her life at least once. Moreover, there are different rites of Hajj which the pilgrims perform during their pilgrimage. The conclusive day of Hajj marks the festival of Eid-ul-Azha.</string>
    <string name="haji_text10">\10 * Depart to Mecca and do a farewell Tawaf. \10 * Let the Tawaf be the last thing you do in.</string>
    <string name="haji_text2">\10 * Take a Bathe. \10 * Wear Ihram Dress. \10 * Make intention for Umrah or Hajj. \10 * Recite Talbiyah. \10 * Avoid Unnecessary acts while in the state.</string>
    <string name="haji_text3">\10 * Do Tawaf around the Kabah. \10 * Pray two Rak’ah Salat. \10 * Between Safa and Marwah, Make sai \10 * Cut your hair and remove Imram Dress.</string>
    <string name="haji_text4">\10 * After Umrah. wear Imram dress again. \10 * Make intention for Hajj. \10 * Stay in Mina during the shul-Jikka and perform five prayers, (zuhr to Fajron the day of Arafat).</string>
    <string name="haji_text5">\10 * Going for Arafat on the morning of the 9th of Dhul-Hijja and remain until sunset. \10 * Reside in any part of Arafat. \10 * Glorify Allah, repeat supplication, repeat to Allah and ask for forgiveness.</string>
    <string name="haji_text6">\10 * Leave for Muzdalifah shortly after sunset. \10 * Pray Maghrib Salat and shortened Isha. \10 * Now stay all night and perform the Fajr.</string>
    <string name="haji_text7">Soon before sunrise, leave Muzdalifah for Mina, Depart to Jamrat al-Aqabah and stone it with seven pebbles. \10 * Slaughter your sacrifice. \10 * Shave your head. \10 * Now Take off Ihram dress.</string>
    <string name="haji_text8">\10 * Perform Tawaf Al-Ifada and sa’i between.\9\9\9\9\9\10  * Later than Tawaf al-Ifada, all restrictions.</string>
    <string name="o_allah_i_seek_refuge_in_you">O Allah, I seek refuge in You lest I associate anything with You knowingly, and I seek Your forgiveness for what I know not.</string>
    <string name="o_allah_send_prayers_upon_the_family_of_the_giver_of_charity">O Allah send prayers upon the family of [the giver of charity]</string>
    <string name="this_is_what_allah_wills_and_there_is_no_might_except_by_allah">(This is) what Allah wills, and there is no might except by Allah</string>
    <string name="done">Done</string>
    <string name="compass_accuracy">Compass accuracy:</string>
    <string name="calibrate_compass">Calibrate your blue dots compass at anytime</string>
    <string name="move_phone3">Tilt and move your phone 3 times like this:</string>
    <string name="dua_for_someone_who_does_good_to_you">Dua for someone who does good to you</string>
    <string name="as29">جَزاكَ اللهُ خَـيْراً</string>
    <string name="may_allah_reward_you_with_good">May Allah reward you with good</string>
    <string name="dua_for_the_person_who_gives_in_charity">Dua for the person who gives in charity</string>
    <string name="as28">اللَّهُمَّ صَلِّ عَلَى آلِ [فُلاَنٍ]</string>
    <string name="dua_when_visiting_the_sick">Dua When Visiting The Sick</string>
    <string name="as30">لَا بَأْسَ طَهُورٌ إِنْ شَآءَ اللّٰہُ</string>
    <string name="this_is_not_a_thing_of_harm_in_sha_allah_azzawajal_this_illness_purifies_from_sins">This is not a thing of harm In Sha Allah Azzawajal this illness purifies from sins</string>
    <string name="du_aa_for_fear_of_shirk">Du’aa for Fear of Shirk</string>
    <string name="as31">اللّهُـمَّ إِنّـي أَعـوذُبِكَ أَنْ أُشْـرِكَ بِكَ وَأَنا أَعْـلَمْ، وَأَسْتَـغْفِرُكَ لِما لا أَعْـلَم</string>
    <string name="dua_when_seeing_something_you_like_about_yourself_or_your_possessions">Dua when seeing something you like about yourself or your possessions</string>
    <string name="as32">مَاشَاء اللَّهُ لَا قُوَّةَ إلاَّ بِاللَّهِ</string>
    <string name="to_seek_forgiveness_and_repentance">To Seek Forgiveness and Repentance</string>
    <string name="as35">قَالَ رَسُولُ اللهِ ﷺ : «وَ اللهِ إِنِّي لأسْتَغْفِرُ اللهَ وَ أ تُوبُ إلَيْهِ فِي اليَوْمِ أكثَرَ مِنْ سَبْعِيْنَ مَرَّةٍ</string>
    <string name="the_messenger_of_allah_sallallahou_apos_alayhi_wa_sallam_said_10_by_allah_i_seek_forgiveness_and_repent_to_allah_more_than_seventy_times_a_day">The Messenger of Allah (sallallahou \"alayhi wa sallam) said :10 « By Allah, I seek forgiveness and repent to Allah, more than seventy times a day. »</string>
</resources>